--- a/KalorAform.MultiwayTree.Tests/KalorAform.MultiwayTree.Tests.csproj
+++ b/KalorAform.MultiwayTree.Tests/KalorAform.MultiwayTree.Tests.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ExtensionMethodsTestsOld.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ExtensionMethodsTestsOld.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
