--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,41 +7,14 @@ jobs:
     name: build, pack & publish
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      # - name: Setup dotnet
-      #   uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: 3.1.200
-
-      # Publish
-      - name: publish on version change
-        id: publish_nuget
-        uses: rohith/publish-nuget@v2
+      - name: NuGet Publisher
+        # You may pin to the exact commit or the version.
+        # uses: Jacup/publish-nuget@0d7b0c6f119fadaf9c3e2bcfcbb3bf3a1c439864
+        uses: Jacup/publish-nuget@v2.6.0
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: KalorAform.MultiwayTree/KalorAform.MultiwayTree.csproj
-          
+          PROJECT_FILE_PATH: KalorAform.MultiwayTree
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: KalorAform.MultiwayTree
-          
-          # Regex pattern to extract version info in a capturing group
-          # VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-          
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          # VERSION_STATIC: 1.0.0
-
-          # Flag to toggle git tagging, enabled by default
-          # TAG_COMMIT: true
-
-          # Format of the git tag, [*] gets replaced with actual version
-          # TAG_FORMAT: v*
-
           # API key to authenticate with NuGet server
           NUGET_KEY: ${{ secrets.NUGET_API_KEY_FOR_MULTIWAYTREE }}
-
-          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          # NUGET_SOURCE: https://api.nuget.org
-
-          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-          # INCLUDE_SYMBOLS: false
