--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: Jacup/publish-nuget@v2.6.0
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: KalorAform.MultiwayTree
+          PROJECT_FILE_PATH: KalorAform.MultiwayTree/KalorAform.MultiwayTree.csproj
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: KalorAform.MultiwayTree
           # API key to authenticate with NuGet server
