generate nupkg on build

--- a/KalorAform.MultiwayTree/KalorAform.MultiwayTree.csproj
+++ b/KalorAform.MultiwayTree/KalorAform.MultiwayTree.csproj
@@ -5,10 +5,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>1.0.0</Version>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/stevenwbass/MultiwayTree</RepositoryUrl>
+    <PackageTags>tree;n-ary;k-ary;nary;kary;multiway;search;traversal;traverse;postorder;post-order;preorder;pre-order;levelorder;level-order</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
