rename to remove tentative namespace

--- a/KalorAform.MultiwayTree.Tests/MultiwayTree.Tests.csproj
+++ b/KalorAform.MultiwayTree.Tests/MultiwayTree.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KalorAform.MultiwayTree\KalorAform.MultiwayTree.csproj" />
+    <ProjectReference Include="..\KalorAform.MultiwayTree\MultiwayTree.csproj" />
   </ItemGroup>
 
 </Project>
