--- a/MultiwayTree.Tests/MultiwayTree.Tests.csproj
+++ b/MultiwayTree.Tests/MultiwayTree.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KalorAform.MultiwayTree\MultiwayTree.csproj" />
+    <ProjectReference Include="..\MultiwayTree\MultiwayTree.csproj" />
   </ItemGroup>
 
 </Project>
